--- a/styles/c6_main.css
+++ b/styles/c6_main.css
@@ -1,205 +1,119 @@
 /* the styles for the elements */
 * {
-    margin: 0;
-    padding: 0;
-  }
-  html {
-    background-color: white;
-  }
-  body {
-    font-family: Arial, Helvetica, sans-serif;
+	margin: 0;
+	padding: 0;
+}
+html {
+	background-color: white;
+}
+body {
+	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
     width: 600px;
     margin: 0 auto;
     border: 3px solid #931420;
     background-color: #fffded;
-  }
-  a:focus,
-  a:hover {
-    font-style: italic;
-  }
-  /* the styles for the header */
-  header {
-    padding: 1.5em 0 2em 0;
-    border-bottom: 3px solid #931420;
-    background-image: -moz-linear-gradient(
-      30deg,
-      #f6bb73 0%,
-      #f6bb73 30%,
-      white 50%,
-      #f6bb73 80%,
-      #f6bb73 100%
-    );
-    background-image: -webkit-linear-gradient(
-      30deg,
-      #f6bb73 0%,
-      #f6bb73 30%,
-      white 50%,
-      #f6bb73 80%,
-      #f6bb73 100%
-    );
-    background-image: -o-linear-gradient(
-      30deg,
-      #f6bb73 0%,
-      #f6bb73 30%,
-      white 50%,
-      #f6bb73 80%,
-      #f6bb73 100%
-    );
-    background-image: linear-gradient(
-      30deg,
-      #f6bb73 0%,
-      #f6bb73 30%,
-      white 50%,
-      #f6bb73 80%,
-      #f6bb73 100%
-    );
-  }
-  header h2 {
-    font-size: 175%;
-    color: #800000;
-  }
-  header h3 {
-    font-size: 130%;
-    font-style: italic;
-  }
-  header img {
-    float: left;
-    padding: 0 30px;
-  }
-  .shadow {
-    text-shadow: 2px 2px 2px #800000;
-  }
-  /* the styles for the main content */
-  main {
-    clear: left;
-  }
-  main {
-    padding: 0 30px;
-  }
-  main h1 {
-    font-size: 150%;
-    padding: 0.3em 0;
+}
+a:focus, a:hover {
+	font-style: italic;
+}
+/* the styles for the header */
+header {
+	padding: 1.5em 0 2em 0;
+	border-bottom: 3px solid #931420;
+	background-image: -moz-linear-gradient(
+	    30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
+	background-image: -webkit-linear-gradient(
+	    30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
+	background-image: -o-linear-gradient(
+	    30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
+	background-image: linear-gradient(
+	    30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
+}
+header h2 {
+	font-size: 175%;
+	color: #800000;
+}
+header h3 {
+	font-size: 130%;
+	font-style: italic;
+}
+header img {
+	float: left;
+	padding: 0 30px;
+}
+.shadow {
+	text-shadow: 2px 2px 2px #800000;
+}
+/* the styles for the main content */
+main {
+	clear: left;
+}
+main {
+	padding: 0 30px;
+}
+main h1 {
+	font-size: 150%;
+	padding: .3em 0;
     border-top: 3px solid #931420;
     border-bottom: 3px solid #931420;
-  }
-  main h2 {
-    color: #800000;
-    font-size: 130%;
-    padding: 0.5em 0 0.25em 0;
-  }
-  main h3 {
-    font-size: 105%;
-    padding-bottom: 0.25em;
-  }
-  main img {
-    padding-bottom: 1em;
-  }
-  main p {
-    padding-bottom: 0.5em;
-  }
-  main blockquote {
-    padding: 0 2em;
-    font-style: italic;
-  }
-  main ul {
-    padding: 0 0 0.25em 1.25em;
-  }
-  main li {
-    padding-bottom: 0.35em;
-  }
-  
-  /* the styles for the article */
-  article {
-    padding: 0.5em 0;
-    border-top: 2px solid #800000;
-    border-bottom: 2px solid #800000;
-  }
-  article h2 {
-    padding-top: 0;
-  }
-  article h3 {
-    font-size: 105%;
-    padding-bottom: 0.25em;
-  }
-  
-  /* the styles for the aside */
-#about {
-  padding: 1rem;
-  background-color: #f9f9f9;
-  border-top: 2px solid #ccc;
+}
+main h2 {
+	color: #800000;
+	font-size: 130%;
+	padding: .5em 0 .25em 0;
+}
+main h3 {
+	font-size: 105%;
+	padding-bottom: .25em;
+}
+main img {
+	padding-bottom: 1em;
+}
+main p {
+	padding-bottom: .5em;
+}
+main blockquote {
+	padding: 0 2em;
+	font-style: italic;
+}
+main ul {
+	padding: 0 0 .25em 1.25em;
+}
+main li {
+	padding-bottom: .35em;
 }
 
-#about ul {
-  list-style-type: disc;
-  padding-left: 20px;
+/* the styles for the article */
+article {
+	padding: .5em 0;
+	border-top: 2px solid #800000;
+	border-bottom: 2px solid #800000;
+}
+article h2 {
+	padding-top: 0;
+}
+article h3 {
+	font-size: 105%;
+	padding-bottom: .25em;
 }
 
-  
-  aside h3 {
-    font-size: 105%;
-    padding-bottom: 0.25em;
-  }
-  aside img {
-    padding-bottom: 1em;
-  }
-  
-  /* the styles for the footer */
-  footer {
-    background-color: #931420;
-  }
-  footer p {
-    text-align: center;
-    color: white;
-    padding: 1em 0;
-  }
-/* Navigation menu styling */
-.nav-menu {
-  list-style: none;
-  display: flex;
-  background-color: #f0f0f0;
-  padding: 10px 20px;
-  margin: 0;
-  gap: 20px;
+/* the styles for the aside */
+
+aside h3 {
+	font-size: 105%;
+	padding-bottom: .25em;
+}
+aside img {
+	padding-bottom: 1em;
 }
 
-.nav-menu > li {
-  position: relative;
+/* the styles for the footer */
+footer {
+	background-color: #931420;
 }
-
-.nav-menu a {
-  text-decoration: none;
-  color: #333;
-  font-weight: bold;
-  padding: 5px 10px;
-}
-
-.nav-menu li:hover > a {
-  background-color: #ddd;
-}
-
-/* Dropdown styling */
-.nav-menu .dropdown {
-  display: none;
-  position: absolute;
-  top: 35px;
-  left: 0;
-  list-style: none;
-  background-color: red;
-  padding: 10px;
-  border: 1px solid #ccc;
-}
-
-.nav-menu li:hover .dropdown {
-  display: block;
-}
-
-.nav-menu .dropdown li {
-  margin: 5px 0;
-}
-
-.nav-menu .dropdown a {
-  color: #007BFF;
-  padding: 5px 10px;
-  display: block;
+footer p {
+	text-align: center;
+	color: white;
+	padding: 1em 0;
 }
