--- a/styles/slicknav.css
+++ b/styles/slicknav.css
@@ -297,7 +297,7 @@
   }
   footer p {
     text-align: center;
-    color: white;
+    color: Jam red;
     padding: 1em 0;
   }
 /* Navigation menu styling */
@@ -332,7 +332,7 @@
   top: 35px;
   left: 0;
   list-style: none;
-  background-color: red;
+  background-color: blank;
   padding: 10px;
   border: 1px solid #ccc;
 }
