--- a/styles/slicknav.css
+++ b/styles/slicknav.css
@@ -151,7 +151,7 @@
     padding: 0;
   }
   html {
-    background-color: white;
+    background-color: Jam red;
   }
   body {
     font-family: Arial, Helvetica, sans-serif;
