--- a/styles/slicknav.css
+++ b/styles/slicknav.css
@@ -1,157 +1,10 @@
-/*
-    Mobile Menu Core Style
-*/
-
-.slicknav_btn {
-	position: relative;
-	display: block;
-	vertical-align: middle;
-	float: right;
-	padding: 0.438em 0.625em 0.438em 0.625em;
-	line-height: 1.125em;
-	cursor: pointer;
-}
-.slicknav_menu .slicknav_menutxt {
-	display: block;
-	line-height: 1.188em;
-	float: left;
-}
-.slicknav_menu .slicknav_icon {
-	float: left;
-	margin: 0.188em 0 0 0.438em;
-}
-.slicknav_menu .slicknav_no-text {
-	margin: 0
-}
-.slicknav_menu .slicknav_icon-bar {
-	display: block;
-	width: 1.125em;
-	height: 0.125em;
-	-webkit-border-radius: 1px;
-	-moz-border-radius: 1px;
-	border-radius: 1px;
-	-webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
-	-moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
-	box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
-}
-.slicknav_btn .slicknav_icon-bar + .slicknav_icon-bar {
-	margin-top: 0.188em
-}
-.slicknav_nav {
-	clear: both
-}
-.slicknav_nav ul, .slicknav_nav li {
-	display: block
-}
-.slicknav_nav .slicknav_arrow {
-	font-size: 0.8em;
-	margin: 0 0 0 0.4em;
-}
-.slicknav_nav .slicknav_item {
-	display: block;
-	cursor: pointer;
-}
-.slicknav_nav a {
-	display: block
-}
-.slicknav_nav .slicknav_item a {
-	display: inline
-}
-.slicknav_menu:before, .slicknav_menu:after {
-	content: " ";
-	display: table;
-}
-.slicknav_menu:after {
-	clear: both
-}
-/* IE6/7 support */
-.slicknav_menu {
-*zoom: 1
-}
-/* 
-    User Default Style
-    Change the following styles to modify the appearance of the menu.
-*/
-
-.slicknav_menu {
-	font-size: 16px;
-}
-/* Button */
-.slicknav_btn {
-	margin: 5px 5px 6px;
-	text-decoration: none;
-	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
-	background-color: #222222;
-}
-/* Button Text */
-.slicknav_menu .slicknav_menutxt {
-	color: #FFF;
-	font-weight: bold;
-	text-shadow: 0 1px 3px #000;
-}
-/* Button Lines */
-.slicknav_menu .slicknav_icon-bar {
-	background-color: #f5f5f5;
-}
-.slicknav_menu {
-	background: #4c4c4c;
-	padding: 5px;
-}
-.slicknav_nav {
-	color: #fff;
-	margin: 0;
-	padding: 0;
-	font-size: 0.875em;
-}
-.slicknav_nav, .slicknav_nav ul {
-	list-style: none;
-	overflow: hidden;
-}
-.slicknav_nav ul {
-	padding: 0;
-	margin: 0 0 0 20px;
-}
-.slicknav_nav .slicknav_item {
-	padding: 5px 10px;
-	margin: 2px 5px;
-}
-.slicknav_nav a {
-	padding: 5px 10px;
-	margin: 2px 5px;
-	text-decoration: none;
-	color: #fff;
-}
-.slicknav_nav .slicknav_item a {
-	padding: 0;
-	margin: 0;
-}
-.slicknav_nav .slicknav_item:hover {
-	-webkit-border-radius: 6px;
-	-moz-border-radius: 6px;
-	border-radius: 6px;
-	background: #ccc;
-	color: #fff;
-}
-.slicknav_nav a:hover {
-	-webkit-border-radius: 6px;
-	-moz-border-radius: 6px;
-	border-radius: 6px;
-	background: #ccc;
-	color: #222;
-}
-.slicknav_nav .slicknav_txtnode {
-	margin-left: 15px;
-}
 /* the styles for the elements */
 * {
     margin: 0;
     padding: 0;
   }
   html {
-    background-color: Jam red;
+    background-color: white;
   }
   body {
     font-family: Arial, Helvetica, sans-serif;
@@ -271,17 +124,6 @@
   }
   
   /* the styles for the aside */
-#about {
-  padding: 1rem;
-  background-color: #f9f9f9;
-  border-top: 2px solid #ccc;
-}
-
-#about ul {
-  list-style-type: disc;
-  padding-left: 20px;
-}
-
   
   aside h3 {
     font-size: 105%;
@@ -297,154 +139,6 @@
   }
   footer p {
     text-align: center;
-    color: Jam red;
+    color: white;
     padding: 1em 0;
   }
-/* Navigation menu styling */
-.nav-menu {
-  list-style: none;
-  display: flex;
-  background-color: #931420;
-  padding: 10px 20px;
-  margin: 0;
-  gap: 20px;
-}
-
-.nav-menu > li {
-  position: relative;
-}
-
-.nav-menu a {
-  text-decoration: none;
-  color: white;
-  font-weight: bold;
-  padding: 5px 10px;
-}
-
-.nav-menu li:hover > a {
-  background-color: #800000;
-}
-
-/* Dropdown styling */
-.nav-menu .dropdown {
-  display: none;
-  position: absolute;
-  top: 35px;
-  left: 0;
-  list-style: none;
-  background-color: #931420; /* Jam red dropdown */
-  padding: 10px;
-  border: 1px solid #ccc;
-  z-index: 100;
-}
-
-.nav-menu li:hover .dropdown {
-  display: block;
-}
-
-.nav-menu .dropdown li {
-  margin: 5px 0;
-}
-
-.nav-menu .dropdown a {
-  color: white;
-  padding: 5px 10px;
-  display: block;
-}
-.nav-menu .dropdown a:hover {
-  background-color: #800000; /* Hover effect in dropdown */
-}
-/* Hamburger icon styling */
-.menu-toggle {
-  display: none;
-  flex-direction: column;
-  width: 30px;
-  cursor: pointer;
-  margin: 10px;
-}
-
-.menu-toggle span {
-  height: 4px;
-  background: white;
-  margin: 5px 0;
-  border-radius: 2px;
-}
-
-/* Navigation menu styling */
-.nav-menu {
-  list-style: none;
-  display: flex;
-  background-color: #931420;
-  padding: 10px 20px;
-  margin: 0;
-  gap: 20px;
-}
-
-.nav-menu > li {
-  position: relative;
-}
-
-.nav-menu a {
-  text-decoration: none;
-  color: white;
-  font-weight: bold;
-  padding: 5px 10px;
-}
-
-.nav-menu li:hover > a {
-  background-color: #800000;
-}
-
-/* Dropdown */
-.nav-menu .dropdown {
-  display: none;
-  position: absolute;
-  top: 35px;
-  left: 0;
-  list-style: none;
-  background-color: #931420;
-  padding: 10px;
-  border: 1px solid #ccc;
-  z-index: 100;
-}
-
-.nav-menu li:hover .dropdown {
-  display: block;
-}
-
-.nav-menu .dropdown a {
-  color: white;
-  display: block;
-  padding: 5px 10px;
-}
-
-.nav-menu .dropdown a:hover {
-  background-color: #800000;
-}
-
-/* Responsive styles */
-@media screen and (max-width: 768px) {
-  .menu-toggle {
-    display: flex;
-  }
-
-  .nav-menu {
-    display: none;
-    flex-direction: column;
-    gap: 10px;
-  }
-
-  .nav-menu.active {
-    display: flex;
-  }
-
-  .nav-menu li {
-    position: static;
-  }
-
-  .nav-menu .dropdown {
-    position: static;
-    border: none;
-  }
-}
-
