--- a/styles/slicknav_speaker.css
+++ b/styles/slicknav_speaker.css
@@ -9,7 +9,7 @@
   body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    width: 600px;
+    width: 800px;
     margin: 0 auto;
     border: 3px solid #931420;
     background-color: #fffded;
@@ -70,42 +70,33 @@
   .shadow {
     text-shadow: 2px 2px 2px #800000;
   }
-  /* the styles for the main content */
-  main {
-    clear: left;
+  /* the styles for the section */
+  section {
+    width: 525px;
+    float: right;
+    padding: 0 20px 20px 20px;
   }
-  main {
-    padding: 0 30px;
-  }
-  main h1 {
+  section h1 {
     font-size: 150%;
-    padding: 0.3em 0;
-    border-top: 3px solid #931420;
-    border-bottom: 3px solid #931420;
+    padding: 0.5em 0 0.25em 0;
+    margin: 0;
   }
-  main h2 {
+  section h2 {
     color: #800000;
     font-size: 130%;
     padding: 0.5em 0 0.25em 0;
   }
-  main h3 {
-    font-size: 105%;
-    padding-bottom: 0.25em;
-  }
-  main img {
-    padding-bottom: 1em;
-  }
-  main p {
+  section p {
     padding-bottom: 0.5em;
   }
-  main blockquote {
+  section blockquote {
     padding: 0 2em;
     font-style: italic;
   }
-  main ul {
+  section ul {
     padding: 0 0 0.25em 1.25em;
   }
-  main li {
+  section li {
     padding-bottom: 0.35em;
   }
   
@@ -122,9 +113,23 @@
     font-size: 105%;
     padding-bottom: 0.25em;
   }
+  article img {
+    float: right;
+    margin: 0.5em 0 1em 1em;
+    border: 1px solid black;
+  }
   
   /* the styles for the aside */
-  
+  aside {
+    width: 215px;
+    float: right;
+    padding: 0 0 20px 20px;
+  }
+  aside h2 {
+    color: #800000;
+    font-size: 130%;
+    padding: 0.5em 0 0.25em 0;
+  }
   aside h3 {
     font-size: 105%;
     padding-bottom: 0.25em;
@@ -136,6 +141,7 @@
   /* the styles for the footer */
   footer {
     background-color: #931420;
+    clear: both;
   }
   footer p {
     text-align: center;
