--- a/styles/c7_main.css
+++ b/styles/c7_main.css
@@ -142,3 +142,35 @@
     color: white;
     padding: 1em 0;
   }
+.nav-menu ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.nav-menu > ul > li {
+  display: inline-block;
+  position: relative;
+  margin-right: 20px;
+}
+
+.nav-menu a {
+  text-decoration: none;
+  padding: 10px;
+  display: block;
+  background-color: #eee;
+  color: #333;
+}
+
+.nav-menu .dropdown {
+  display: none;
+  position: absolute;
+  background-color: #fff;
+  box-shadow: 0px 4px 6px rgba(0,0,0,0.1);
+  z-index: 100;
+}
+
+.nav-menu li:hover .dropdown {
+  display: block;
+}
+
